crates/test-ui/ui/msg_send_id_alloc_init_different.stderr
error[E0271]: type mismatch resolving `<Id<objc2::runtime::Object, Shared> as MaybeUnwrap>::Input == Id<NSObject, _>`
 --> ui/msg_send_id_alloc_init_different.rs
  |
  |     let _: Id<Object, Shared> = unsafe { msg_send_id![obj, init] };
  |                                          ^^^^^^^^^^^^^^^^^^^^^^^ expected struct `NSObject`, found struct `objc2::runtime::Object`
  |
  = note: expected struct `Id<NSObject, _>`
             found struct `Id<objc2::runtime::Object, Shared>`
note: required by a bound in `send_message_id`
 --> $WORKSPACE/crates/objc2/src/__macro_helpers.rs
  |
  |     unsafe fn send_message_id<A: MessageArguments, R: MaybeUnwrap<Input = U>>(
  |                                                                   ^^^^^^^^^ required by this bound in `send_message_id`
  = note: this error originates in the macro `msg_send_id` (in Nightly builds, run with -Z macro-backtrace for more info)
